# SDS_Quantum_metric

./: .env.example  .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  bandit.yml  package-lock.json  package.json  pyproject.toml
.github/workflows/: ci.yml  release.yml
backend/: __init__.py
backend/app/: main.py  runtime.py
backend/tests/: test_api.py  test_browser_cookies.py  test_config_store.py  test_dashboard_analytics.py  test_desktop_app.py  test_desktop_icons.py  test_ingestion_config_driven.py  test_ingestion_incremental_publish.py  test_ingestion_policy.py  test_iteration10_range_export_security.py  test_iteration12_dashboard_discovery.py  test_iteration14_dashboard_resources.py  test_iteration18_exact_widget_contracts.py  test_iteration6_hardening.py  test_parquet_store.py  test_quantum_dashboard_evidence.py  test_quantum_dashboard_iteration4.py  test_quantum_dashboard_periods_axes.py  test_range_query.py  test_security.py  test_services.py
desktop/: QuantumMetricViewer.spec  __init__.py  app.py  backend_runtime.py  icon.py
desktop/assets/: icon.icns
docs/as-is/: README.md  api-catalog.md  auth-session-model.md  dashboard-card-map.md  dashboard-inventory.md  data-contracts.md  iteration-10-range-parity-audit.md  iteration-11-code-audit.md  iteration-12-dashboard-config-audit.md  iteration-12-preflight-iteration-11-closure.md  iteration-13-dashboard-discovery-audit.md  iteration-14-quantum-web-audit.md  iteration-15-critical-rca.md  iteration-15-ingestion-failure-rca.md  iteration-16-widget-support-rca.md  (+14 more)
frontend/: index.html  package.json
scripts/: build_desktop.py  ensure_playwright_browsers.py  generate_icons.py  kill_app.py  run_app.py  scan_no_secrets.py  setup_codeql.py  sign_macos_app.py  smoke_test_desktop.py
(+232 files in other folders)
